--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "node --loader ts-node/esm src/index.ts"
+    "dev": "node --loader ts-node/esm src/index.ts",
+    "tx:flash": "node --loader ts-node/esm src/flash-loan/examples/flash.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@9.6.0",
   "dependencies": {
-    "@fleet-sdk/common": "^0.8.0",
-    "@fleet-sdk/compiler": "^0.8.2",
-    "@fleet-sdk/core": "^0.8.2",
-    "@fleet-sdk/wallet": "^0.8.2",
+    "@fleet-sdk/common": "^0.8.3",
+    "@fleet-sdk/compiler": "^0.8.3",
+    "@fleet-sdk/core": "^0.8.3",
+    "@fleet-sdk/mock-chain": "^0.8.4",
+    "@fleet-sdk/wallet": "^0.8.3",
     "dotenv": "^16.5.0",
     "ts-results-es": "^5.0.1"
   },
